--- a/Sản phẩm/requirements.txt
+++ b/Sản phẩm/requirements.txt
@@ -1,10 +1,7 @@
-streamlit
-numpy
-pandas
 matplotlib
-scikit-learn
+scikit-learn==0.22.1
 plotly
 seaborn
-streamlit==1.24.1
-pandas>2.0
-numpy<=1.25.1
+streamlit==1.37.1
+pandas==1.0.5
+numpy==1.18.1
