--- a/Sản phẩm/requirements.txt
+++ b/Sản phẩm/requirements.txt
@@ -1,7 +1,7 @@
-matplotlib
+matplotlib==3.9.1
 scikit-learn==0.22.1
-plotly
-seaborn
+plotly==5.23.0
+seaborn==0.13.2
 streamlit==1.37.1
-pandas==1.0.5
-numpy==1.18.1
+pandas==2.2.2
+numpy==2.0.0
